# docker-qt

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Dockerfile_5.12.11  Dockerfile_5.15.2  Dockerfile_5.x  Dockerfile_6.10.2  Dockerfile_6.5  Dockerfile_6.5.3  Dockerfile_6.6.0  Dockerfile_6.6.1  Dockerfile_6.6.3_jammy  Dockerfile_6.7.2  Dockerfile_6.7.3  Dockerfile_6.8.2  Dockerfile_6.8.3  Dockerfile_6.9.1  Dockerfile_6.x  Dockerfile_6.x_bionic  Dockerfile_6.x_jammy  LICENSE  README.md  build_5.15.10.sh  build_5.15.2.sh  build_5.15.8.sh  build_6.0.4.sh  build_6.1.2.sh  build_6.1.3.sh  build_6.2.0.sh  build_6.2.2.sh  build_6.2.3.sh  build_6.2.4.sh  build_6.2.4_jammy.sh  build_6.3.0-rc1.sh  build_6.3.0_jammy.sh  build_6.3.1_jammy.sh  build_6.3.2_jammy.sh  build_6.4.0_bionic.sh  build_6.4.0_focal.sh  (+10 more)
6.10.0/: build_6.10.0_amd64.sh  build_6.10.0_android.sh  build_6.10.0_arm64.sh
6.10.1/: build_6.10.1_amd64.sh  build_6.10.1_android.sh  build_6.10.1_arm64.sh
6.10.2/: build_6.10.2_amd64.sh  build_6.10.2_android.sh  build_6.10.2_arm64.sh
6.4.3/: build_6.4.3_jammy.sh  download_6.4.3_jammy.sh
6.5.0/: download_6.5.0_jammy.sh
6.5.1/: build_6.5.1.sh  download_6.5.1_jammy.sh
6.5.2/: build_6.5.2.sh  download_6.5.2.sh
6.5.3/: build_6.5.3.sh  download_6.5.3.sh
6.6.0/: Dockerfile  build_6.6.0.sh  download_6.6.0.sh
6.6.1/: build_6.6.1.sh  download_6.6.1.sh
6.6.2/: build_6.6.2.sh  download_6.6.2.sh
6.6.3/: build_6.6.3.sh  download_6.6.2.sh
6.7.0/: build_6.7.0.sh  download_6.7.0.sh
6.7.1/: build_6.7.1.sh  (+2 more)
tests/SslCheck/: CMakeLists.txt  main.cpp
(+67 files in other folders)
